# site2skill-go

./: .gitignore  .ko.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  TEST_COVERAGE_ANALYSIS.md  go.mod  go.sum  index.html  pyproject.toml  robots.txt
.claude/hooks/: SessionStart
.github/workflows/: crawl-e2e.yaml  deploy-pages.yaml  site2skill-hub.yaml
cmd/s2s-go/: main.go
cmd/site2skill/: main.go
cmd/site2skillgo/: main.go
docs/en/getting-started/: index.html
docs/filters/: index.html
docs/filters/exclude-me/: index.html
docs/filters/include-only/: index.html
docs/filters/mixed-signal/: index.html
docs/getting-started/: index.html
docs/ja/examples/: index.html
docs/ja/forbidden/: index.html
docs/ja/getting-started/: index.html
docs/ja/installation/: index.html
docs/ja/pattern-c/: index.html
docs/ng/: index.html
docs/zh-tw/getting-started/: index.html
internal/converter/: converter.go  converter_test.go
internal/fetcher/: fetcher.go  fetcher_test.go  locale.go  locale_test.go  robots.go  robots_test.go
internal/normalizer/: normalizer.go  normalizer_test.go
internal/packager/: packager.go  packager_test.go
internal/search/: search.go  search_test.go  types.go
internal/skillgen/: skillgen.go  skillgen_test.go
internal/validator/: validator.go  validator_test.go
site/: index.html  server.go
site/docs/ng/: index.html
site2skill/: __init__.py  fetch_site.py
site2skillgo/: __init__.py  convert_to_markdown.py  generate_skill_structure.py  main.py  normalize_markdown.py  package_skill.py  validate_skill.py
(+8 files in other folders)
